trustfall_core/test_data/tests/parse_errors/unrecognized_directive.parse-error.ron
Err(UnrecognizedDirective("unrecognized", Pos(
  line: 4,
  column: 15,
)))
